2006-03-06  Joshua Tauberer <tauberer@for.net>

	* Mono.Cecil/TypeAttributes.cs: Fixed typo
	  in value for Abstract.

2006-02-27  Jb Evain  <jbevain@gmail.com>

	* CodeGen/templates/IndexedCollectionImplem.cs
	  CodeGen/templates/IIndexedCollection.cs
	  Mono.Cecil.Cil/InstructionCollection.cs
	  Mono.Cecil.Cil/IInstructionCollection.cs:
		Small API fix, prevent the user from not using
		the CilWorker.

	* Mono.Cecil.Cil/CodeReader.cs
	  Mono.Cecil.Cil/Label.cs:
		Remove Label.

	* Mono.Cecil/ReflectionReader.cs:
		Fix typo.

2006-02-20  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil.Signatures/SignatureWriter.cs:
		Fix a bug when a value is null in a custom attribute.

2006-02-20  Sebastien Pouliot  <sebastien@ximian.com>

	* Mono.Cecil.Metadata/MetadataWriter.cs:
		Fix GetStrongNameSignatureSize to handle the ECMA pseudo-key.

2006-02-07  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/AssemblyInfos.cs:
		Tag this version 0.3, as users are happy with it.

2006-01-26  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/CustomAttribute.cs:
		Fix cloning of non readable attributes.

	* Mono.Cecil/ReflectionReader.cs
	  Mono.Cecil/ReflectionWriter.cs
	  Mono.Cecil.Signatures/MethodRefSig.cs
	  Mono.Cecil.Signatures/SignatureWriter.cs
	  Mono.Cecil.Signatures/MethodDefSig.cs:
		Work on generics.

	* Mono.Cecil/ArrayType.cs
	  Mono.Cecil/ReferenceType.cs
	  Mono.Cecil/PointerType.cs:
		Fix names of typespecs.

	* Mono.Cecil/TypeReferenceCollection.cs
	  Mono.Cecil/ExternTypeCollection.cs
	  CodeGen/templates/NamedCollectionImplem.cs:
		Allow multiple key by names in type references.

2006-01-25  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/AssemblyFactory.cs:
		Don't trap exceptions.

	* Mono.Cecil/GenericParameter.cs
	  Mono.Cecil/IMethod.cs
	  Mono.Cecil/GenericInstanceType.cs
	  Mono.Cecil/TypeReference.cs
	  Mono.Cecil/GenericInstanceMethod.cs
	  Mono.Cecil/ReflectionReader.cs
	  Mono.Cecil/TypeDefinition.cs
	  Mono.Cecil/IGenericArgumentCollection.cs